samples/errors/constructor-not-in-class.fls
func x()
    ctor(m, n)
        this.m: m
        this.n: n
